fixing minor spacing issues on the agency page [#529]

--- a/src/sass/_elements.scss
+++ b/src/sass/_elements.scss
@@ -6,7 +6,7 @@ hr {
 	border: 0;
 	clear: both;
 	height: 1px;
-	margin-bottom: 1.5em;
+	margin-bottom: 3rem;
 }
 ul, ol {
 	margin: 0 0 1.5em 3em;
